[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grvt-sdk"
version = "0.3.0"
description = "Python SDK for GRVT Exchange – REST, WebSocket, EIP-712 signing, and low-latency order pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "yodablocks" }]
keywords = ["grvt", "crypto", "trading", "sdk", "eip712", "websocket"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "aiohttp>=3.9",
    "eth-account>=0.11",
    "pydantic>=2.5",
    "requests>=2.31",
    "websockets>=12.0",
]

[project.urls]
Homepage   = "https://github.com/yodablocks/grvt-sdk"
Repository = "https://github.com/yodablocks/grvt-sdk"
Changelog  = "https://github.com/yodablocks/grvt-sdk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "black",
    "ruff",
    "mypy",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
grvt_sdk = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["eth_account.*", "websockets.*", "aiohttp.*"]
ignore_missing_imports = true
